Configure our project with webpack

--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "homepage": "https://github.com/vsheva/Food#readme",
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "webpack": "^5.52.1",
+    "webpack-cli": "^4.8.0"
   },
   "dependencies": {
     "axios": "^0.21.4"
