--- a/package.json
+++ b/package.json
@@ -11,17 +11,28 @@
   },
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    ">1%"
+  ],
   "bugs": {
     "url": "https://github.com/vsheva/Food/issues"
   },
   "homepage": "https://github.com/vsheva/Food#readme",
   "devDependencies": {
+    "@babel/cli": "^7.15.4",
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "core-js": "^3.17.3",
     "json-server": "^0.16.3",
     "webpack": "^5.52.1",
     "webpack-cli": "^4.8.0"
   },
   "dependencies": {
-    "axios": "^0.21.4"
+    "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.4",
+    "es6-promise": "^4.2.8",
+    "nodelist-foreach-polyfill": "^1.2.0"
   },
   "description": ""
 }
